--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WhacAMole">
         <activity
-            android:name=".ui.activity.MainActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:name=".ui.activity.SplashScreen"
+            android:exported="true"
+            android:theme="@style/splashScreen"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
